fix(android): avoid unsupported virtual threads